--- a/index.html
+++ b/index.html
@@ -1,72 +1,71 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
-   <header>
-     <nav>
-       <h1>
-         Техномарт
-       </h1>
-       <input type="search" placeholder="Поиск:">
-       <a href="blank.html">
-         Закладки: 0
-       </a>
-       <a href="blank.html">
-         Корзина: 0
-       </a>
-       <a href="blank.html">
-         Оформить заказ
-       </a>
-       <p>Интернет-магазин<br>
-строительных материалов<br>
-и инструментов для ремонта</p>
-        <p>+7 (812) 555-05-55</p>
-      </selection>
-      <select
-       <p>
-         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-       </p>
-       <a href="blank.html">
-         Войти
-       </a>
-       <a href="blank.html">
-         Регистрация
-       </a>
-       <ul>
-         <li><a href="index.html"></li>
-         <li><a href="blank.html">Компания</a></li>
-         <li><a href="catalog.html">Каталог</a></li>
-         <li><a href="blank.html">Новости</a></li>
-         <li><a href="blank.html">Спецпредложения</a></li>
-         <li><a href="blank.html">Доставка</a></li>
-         <li><a href="blank.html">Контакты</a></li>
-       </ul>
-     </nav>
-   </header>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <h1>
+        Техномарт
+      </h1>
+      <input type="search" placeholder="Поиск:">
+      <a href="blank.html">
+        Закладки: 0
+      </a>
+      <a href="blank.html">
+        Корзина: 0
+      </a>
+      <a href="blank.html">
+        Оформить заказ
+      </a>
+      <p>Интернет-магазин<br>
+        строительных материалов<br>
+        и инструментов для ремонта</p>
+      <p>+7 (812) 555-05-55</p>
+      <p>
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+      </p>
+      <a href="blank.html">
+        Войти
+      </a>
+      <a href="blank.html">
+        Регистрация
+      </a>
+      <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="blank.html">Компания</a></li>
+        <li><a href="blank.html">Каталог</a></li>
+        <li><a href="blank.html">Спецпредложения</a></li>
+        <li><a href="blank.html">Доставка</a></li>
+        <li><a href="blank.html">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
     <section>
       <h2>Материалы</h2>
-      <a href="blank.html">НА ЛЮБОЙ ВСКУС<a/>
+      <a href="blank.html">НА ЛЮБОЙ ВСКУС</a>
     </section>
     <section>
       <h2>Инструмент</h2>
-      <a href="blank.html">НА ВСЕ СЛУЧАИ<a/>
+      <a href="blank.html">НА ВСЕ СЛУЧАИ</a>
     </section>
     <section>
       <h2>Техника</h2>
-      <a href="blank.html">ДЛЯ СТРОЙКИ<a/>
+      <a href="blank.html">ДЛЯ СТРОЙКИ</a>
     </section>
     <section>
       <h2>Скидка 50%</h2>
-      <a href="blank.html">А 350 ТОВАРОВ<a/>
+      <a href="blank.html">А 350 ТОВАРОВ</a>
     </section>
     <section>
       <h2>ДОСТАВКА</h2>
-      <a href="blank.html">БЕСПЛАТНО<a/>
+      <a href="blank.html">БЕСПЛАТНО</a>
     </section>
     <section>
       <h2>ПЕРФОРАТОРЫ</h2>
@@ -77,73 +76,73 @@
       <span>ПОПУЛЯРНЫЕ ТОВАРЫ:</span>
       <a href="blank.html">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
     </section>
-   <article class="drill">
-     <section>
-       <a href="#">КУПИТЬ</a>
-       <a href="#">В ЗАКЛАДКУ</a>
-     </section>
-       <img src="" alt="">
-     <section>
-       <span>Перфоратор BOSCH BFG 9000</span>
-     </section>
-     <section>
-       <span>32500 Р.</span>
-     </section>
-     <section>
-       <a href="#">25500 Р.</a>
-     </section>
+    <article class="drill">
+      <section>
+        <a href="#">КУПИТЬ</a>
+        <a href="#">В ЗАКЛАДКУ</a>
+      </section>
+      <img src="" alt="">
+      <section>
+        <span>Перфоратор BOSCH BFG 9000</span>
+      </section>
+      <section>
+        <span>32500 Р.</span>
+      </section>
+      <section>
+        <a href="#">25500 Р.</a>
+      </section>
 
     </article>
 
     <section>
       <ul>
-      <li><a href="blank.html">BOSCH<a/></li>
-      <li><a href="blank.html">MAKITA<a/></li>
-      <li><a href="blank.html">DeWALT<a/></li>
-      <li><a href="blank.html">ИНТРЕСКОЛ<a/></li>
-      <li><a href="blank.html">HITACHI<a/></li>
-      <li><a href="blank.html">LG<a/></li>
-      <li><a href="blank.html">AEG<a/></li>
-      <li><a href="blank.html">METABO<a/></li>
+        <li><a href="blank.html">BOSCH</a></li>
+        <li><a href="blank.html">MAKITA</a></li>
+        <li><a href="blank.html">DeWALT</a></li>
+        <li><a href="blank.html">ИНТРЕСКОЛ</a></li>
+        <li><a href="blank.html">HITACHI</a></li>
+        <li><a href="blank.html">LG</a></li>
+        <li><a href="blank.html">AEG</a></li>
+        <li><a href="blank.html">METABO</a></li>
       </ul>
     </section>
-  <section>
-    <h2>СЕРВИСЫ</h2>
-    <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-  </section>
-  <section>
-    <label for="button-1">Доставка</label>
-    <label for="button-2">Гарантия</label>
-    <label for="button-3">Кредит</label>
-  </section>
-  <section>
-    <h2>ДОСТАВКА</h2>
-    <p>
-      Мы с удовольствием доставим ваш товар прямо<br>
-      к вашему подъезду совершенно бесплатно!<br>
-      Ведь мы неплохо заработаем,<br>
-      поднимая его на ваш этаж!
-    </p>
-  </section>
-  <section>
+    <section>
+      <h2>СЕРВИСЫ</h2>
+      <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+        Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+    </section>
+    <section>
+      <label for="button-1">Доставка</label>
+      <label for="button-2">Гарантия</label>
+      <label for="button-3">Кредит</label>
+    </section>
+    <section>
+      <h2>ДОСТАВКА</h2>
+      <p>
+        Мы с удовольствием доставим ваш товар прямо<br>
+        к вашему подъезду совершенно бесплатно!<br>
+        Ведь мы неплохо заработаем,<br>
+        поднимая его на ваш этаж!
+      </p>
+    </section>
+    <section>
       <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
       <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-         строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
+        строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
       <p></p>
       <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-         Техномарт работает со многими транспортными компаниями:</p>
+        Техномарт работает со многими транспортными компаниями:</p>
     </section>
 
 
     <section>
 
-    <ul>
-      <li>Деловые линии</li>
-      <li>Автотрейдинг</li>
-      <li>ЖелДорЭкспедиция</li>
-    </ul>
-    <a href="blank.html">ПОДРОБНЕЕ О КОМПАНИИ</a>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <a href="blank.html">ПОДРОБНЕЕ О КОМПАНИИ</a>
     </section>
 
 
@@ -151,7 +150,7 @@
 
       <h2>КОНТАКТЫ</h2>
       <p>Вы можете забрать товар сами,<br>
-      заехав в наш офис.</p>
+        заехав в наш офис.</p>
       <a href="blank.html">тут будет карта</a>
       <a href="blank.html">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
     </section>
@@ -159,59 +158,60 @@
   <footer>
     <section>
 
-    <h1>
-      Техномарт
-    </h1>
-    <p>
-      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-       +7 (812) 555-05-55
-    </p>
-  </section>
-  <section>
+      <h1>
+        Техномарт
+      </h1>
+      <p>
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+        +7 (812) 555-05-55
+      </p>
+    </section>
+    <section>
 
-  <ul>
-    <li><a href="blank.html">Компания</a></li>
-    <li><a href="blank.html">Новости</a></li>
-    <li><a href="catalog.html">Каталог</a></li>
-    <li><a href="blank.html">Доставка</a></li>
-    <li><a href="blank.html">Контакты</a></li>
-  </ul>
-</section>
-  <section>
-  <ul>
-    <li><a href="blank.html">Материал</a></li>
-    <li><a href="blank.html">Техника</a></li>
-    <li><a href="catalog.html">Инструмент</a></li>
-    <li><a href="blank.html">Спецпредлжения</a></li>
-  </ul>
-</section>
-<section>
-  <p>
-    © 2010-2016 Компания «Техномарт»<br>
-    Все права защищены
-  </p>
-</section>
-<section>
-  <ul>
-  <li>
-    <a href="#">Вконтакте</a>
-  </li>
-  <li>
-    <a href="#">Фейсбук</a>
-  </li>
-  <li>
-    <a href="#">Инстаграм</a>
-  </li>
-</ul>
-</section>
-  <section>
-    <p>Обратная связь:</p><br>
-    <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-  </section>
-  <section>
-    <p>Разработано — </p><br>
-    <a href=" htmlacademy.ru"> htmlacademy.ru</a>
-  </section>
+      <ul>
+        <li><a href="blank.html">Компания</a></li>
+        <li><a href="blank.html">Новости</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="blank.html">Доставка</a></li>
+        <li><a href="blank.html">Контакты</a></li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li><a href="blank.html">Материал</a></li>
+        <li><a href="blank.html">Техника</a></li>
+        <li><a href="catalog.html">Инструмент</a></li>
+        <li><a href="blank.html">Спецпредлжения</a></li>
+      </ul>
+    </section>
+    <section>
+      <p>
+        © 2010-2016 Компания «Техномарт»<br>
+        Все права защищены
+      </p>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <p>Обратная связь:</p><br>
+      <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    </section>
+    <section>
+      <p>Разработано — </p><br>
+      <a href=" htmlacademy.ru"> htmlacademy.ru</a>
+    </section>
   </footer>
-  </body>
+</body>
+
 </html>
