--- a/index.html
+++ b/index.html
@@ -8,102 +8,111 @@
 
 <body>
   <header>
+    <h1>
+      <a href="index.html">Техномарт</a>
+    </h1>
+    <input type="search" placeholder="Поиск:">
+    <a href="#">
+      Закладки: 0
+    </a>
+    <ul>
+      <li><a href="#">
+          Корзина: 0
+        </a></li>
+      <li><a href="#">
+          Оформить заказ
+        </a></li>
+    </ul>
+    <p>Интернет-магазин<br>
+      строительных материалов<br>
+      и инструментов для ремонта</p>
+    <p>+7 (812) 555-05-55</p>
+    <p>
+      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+    </p>
+    <a href="#">
+      Войти
+    </a>
+    <a href="#">
+      Регистрация
+    </a>
     <nav>
-      <h1>
-        Техномарт
-      </h1>
-      <input type="search" placeholder="Поиск:">
-      <a href="blank.html">
-        Закладки: 0
-      </a>
-      <a href="blank.html">
-        Корзина: 0
-      </a>
-      <a href="blank.html">
-        Оформить заказ
-      </a>
-      <p>Интернет-магазин<br>
-        строительных материалов<br>
-        и инструментов для ремонта</p>
-      <p>+7 (812) 555-05-55</p>
-      <p>
-        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-      </p>
-      <a href="blank.html">
-        Войти
-      </a>
-      <a href="blank.html">
-        Регистрация
-      </a>
       <ul>
         <li><a href="index.html">Главная</a></li>
-        <li><a href="blank.html">Компания</a></li>
-        <li><a href="blank.html">Каталог</a></li>
-        <li><a href="blank.html">Спецпредложения</a></li>
-        <li><a href="blank.html">Доставка</a></li>
-        <li><a href="blank.html">Контакты</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Спецпредложения</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <section>
-      <h2>Материалы</h2>
-      <a href="blank.html">НА ЛЮБОЙ ВСКУС</a>
-    </section>
-    <section>
-      <h2>Инструмент</h2>
-      <a href="blank.html">НА ВСЕ СЛУЧАИ</a>
-    </section>
-    <section>
-      <h2>Техника</h2>
-      <a href="blank.html">ДЛЯ СТРОЙКИ</a>
-    </section>
-    <section>
-      <h2>Скидка 50%</h2>
-      <a href="blank.html">А 350 ТОВАРОВ</a>
-    </section>
-    <section>
-      <h2>ДОСТАВКА</h2>
-      <a href="blank.html">БЕСПЛАТНО</a>
-    </section>
-    <section>
-      <h2>ПЕРФОРАТОРЫ</h2>
-      <span>Настоящие мужские игрушки</span>
-      <a href="blank.html">ОТКРЫТЬ КАТАЛОГ</a>
+      <ul>
+        <li>
+          <h2>Материалы</h2>
+          <a href="#">НА ЛЮБОЙ ВСКУС</a>
+        </li>
+
+        <li>
+          <h2>Инструмент</h2>
+          <a href="#">НА ВСЕ СЛУЧАИ</a>
+        </li>
+
+        <li>
+          <h2>Техника</h2>
+          <a href="#">ДЛЯ СТРОЙКИ</a>
+        </li>
+
+        <li>
+          <h2>Скидка 50%</h2>
+          <a href="#">А 350 ТОВАРОВ</a>
+        </li>
+
+        <li>
+          <h2>ДОСТАВКА</h2>
+          <a href="#">БЕСПЛАТНО</a>
+        </li>
+
+        <li>
+          <h2>ПЕРФОРАТОРЫ</h2>
+          <span>Настоящие мужские игрушки</span>
+          <a href="#">ОТКРЫТЬ КАТАЛОГ</a>
+        </li>
+      </ul>
     </section>
     <section>
       <span>ПОПУЛЯРНЫЕ ТОВАРЫ:</span>
-      <a href="blank.html">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+      <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
     </section>
-    <article class="drill">
-      <section>
-        <a href="#">КУПИТЬ</a>
-        <a href="#">В ЗАКЛАДКУ</a>
-      </section>
-      <img src="" alt="">
-      <section>
-        <span>Перфоратор BOSCH BFG 9000</span>
-      </section>
-      <section>
-        <span>32500 Р.</span>
-      </section>
-      <section>
-        <a href="#">25500 Р.</a>
-      </section>
-
-    </article>
-
     <section>
       <ul>
-        <li><a href="blank.html">BOSCH</a></li>
-        <li><a href="blank.html">MAKITA</a></li>
-        <li><a href="blank.html">DeWALT</a></li>
-        <li><a href="blank.html">ИНТРЕСКОЛ</a></li>
-        <li><a href="blank.html">HITACHI</a></li>
-        <li><a href="blank.html">LG</a></li>
-        <li><a href="blank.html">AEG</a></li>
-        <li><a href="blank.html">METABO</a></li>
+
+        <li><a href="#">КУПИТЬ</a></li>
+        <li><a href="#">В ЗАКЛАДКУ</a></li>
+        <li><img src="" alt=""></li>
+        <li><span>Перфоратор BOSCH BFG 9000</span></li>
+
+        <li><span>32500 Р.</span></li>
+        <li><a href="#">25500 Р.</a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
+      <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+    </section>
+    <section>
+      <ul>
+        <li><a href="#">BOSCH</a></li>
+        <li><a href="#">MAKITA</a></li>
+        <li><a href="#">DeWALT</a></li>
+        <li><a href="#">ИНТРЕСКОЛ</a></li>
+        <li><a href="#">HITACHI</a></li>
+        <li><a href="#">LG</a></li>
+        <li><a href="#">AEG</a></li>
+        <li><a href="#">METABO</a></li>
       </ul>
     </section>
     <section>
@@ -111,28 +120,29 @@
       <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
     </section>
-    <section>
-      <label for="button-1">Доставка</label>
-      <label for="button-2">Гарантия</label>
-      <label for="button-3">Кредит</label>
-    </section>
-    <section>
-      <h2>ДОСТАВКА</h2>
-      <p>
-        Мы с удовольствием доставим ваш товар прямо<br>
-        к вашему подъезду совершенно бесплатно!<br>
-        Ведь мы неплохо заработаем,<br>
-        поднимая его на ваш этаж!
-      </p>
-    </section>
-    <section>
-      <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
-      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-        строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
-      <p></p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-        Техномарт работает со многими транспортными компаниями:</p>
-    </section>
+
+    <ul>
+      <li><label for="button-1">Доставка</label></li>
+      <li><label for="button-2">Гарантия</label></li>
+      <li><label for="button-3">Кредит</label></li>
+    </ul>
+
+    <h2>ДОСТАВКА</h2>
+    <p>
+      Мы с удовольствием доставим ваш товар прямо<br>
+      к вашему подъезду совершенно бесплатно!<br>
+      Ведь мы неплохо заработаем,<br>
+      поднимая его на ваш этаж!
+    </p>
+
+
+    <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
+    <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+      строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
+    <p></p>
+    <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+      Техномарт работает со многими транспортными компаниями:</p>
+
 
 
     <section>
@@ -142,7 +152,7 @@
         <li>Автотрейдинг</li>
         <li>ЖелДорЭкспедиция</li>
       </ul>
-      <a href="blank.html">ПОДРОБНЕЕ О КОМПАНИИ</a>
+      <a href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
     </section>
 
 
@@ -151,16 +161,16 @@
       <h2>КОНТАКТЫ</h2>
       <p>Вы можете забрать товар сами,<br>
         заехав в наш офис.</p>
-      <a href="blank.html">тут будет карта</a>
-      <a href="blank.html">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+      <a href="#">тут будет карта</a>
+      <a href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
     </section>
   </main>
   <footer>
     <section>
 
-      <h1>
+      <h2>
         Техномарт
-      </h1>
+      </h2>
       <p>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         +7 (812) 555-05-55
@@ -169,19 +179,19 @@
     <section>
 
       <ul>
-        <li><a href="blank.html">Компания</a></li>
-        <li><a href="blank.html">Новости</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="blank.html">Доставка</a></li>
-        <li><a href="blank.html">Контакты</a></li>
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </section>
     <section>
       <ul>
-        <li><a href="blank.html">Материал</a></li>
-        <li><a href="blank.html">Техника</a></li>
-        <li><a href="catalog.html">Инструмент</a></li>
-        <li><a href="blank.html">Спецпредлжения</a></li>
+        <li><a href="#">Материал</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредлжения</a></li>
       </ul>
     </section>
     <section>
@@ -213,5 +223,3 @@
     </section>
   </footer>
 </body>
-
-</html>
