--- a/index.html
+++ b/index.html
@@ -89,21 +89,41 @@
     </section>
     <section>
       <ul>
-
         <li><a href="#">КУПИТЬ</a></li>
         <li><a href="#">В ЗАКЛАДКУ</a></li>
         <li><img src="" alt=""></li>
         <li><span>Перфоратор BOSCH BFG 9000</span></li>
-
         <li><span>32500 Р.</span></li>
         <li><a href="#">25500 Р.</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">КУПИТЬ</a></li>
+        <li><a href="#">В ЗАКЛАДКУ</a></li>
+        <li><img src="" alt=""></li>
+        <li><span>Перфоратор BOSCH BFG 3000</span></li>
+        <li><span>22500 Р.</span></li>
+        <li><a href="#">15500 Р.</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">КУПИТЬ</a></li>
+        <li><a href="#">В ЗАКЛАДКУ</a></li>
+        <li><img src="" alt=""></li>
+        <li><span>Перфоратор BOSCH BFG 6000</span></li>
+        <li><span>30500 Р.</span></li>
+        <li><a href="#">25500 Р.</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">КУПИТЬ</a></li>
+        <li><a href="#">В ЗАКЛАДКУ</a></li>
+        <li><img src="" alt=""></li>
+        <li><span>Перфоратор BOSCH BFG 2000</span></li>
+        <li><span>22500 Р.</span></li>
+        <li><a href="#">15500 Р.</a></li>
       </ul>
     </section>
     <section>
       <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
       <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
-    </section>
-    <section>
       <ul>
         <li><a href="#">BOSCH</a></li>
         <li><a href="#">MAKITA</a></li>
@@ -119,33 +139,30 @@
       <h2>СЕРВИСЫ</h2>
       <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+
+
+      <ul>
+        <li><label for="button-1">Доставка</label></li>
+        <li><label for="button-2">Гарантия</label></li>
+        <li><label for="button-3">Кредит</label></li>
+      </ul>
+
+      <h2>ДОСТАВКА</h2>
+      <p>
+        Мы с удовольствием доставим ваш товар прямо<br>
+        к вашему подъезду совершенно бесплатно!<br>
+        Ведь мы неплохо заработаем,<br>
+        поднимая его на ваш этаж!
+      </p>
     </section>
-
-    <ul>
-      <li><label for="button-1">Доставка</label></li>
-      <li><label for="button-2">Гарантия</label></li>
-      <li><label for="button-3">Кредит</label></li>
-    </ul>
-
-    <h2>ДОСТАВКА</h2>
-    <p>
-      Мы с удовольствием доставим ваш товар прямо<br>
-      к вашему подъезду совершенно бесплатно!<br>
-      Ведь мы неплохо заработаем,<br>
-      поднимая его на ваш этаж!
-    </p>
-
-
-    <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
-    <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-      строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
-    <p></p>
-    <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-      Техномарт работает со многими транспортными компаниями:</p>
-
-
-
     <section>
+
+      <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
+      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+        строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
+      <p></p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        Техномарт работает со многими транспортными компаниями:</p>
 
       <ul>
         <li>Деловые линии</li>
@@ -169,7 +186,7 @@
     <section>
 
       <h2>
-        Техномарт
+        <a href="#">Техномарт</a>
       </h2>
       <p>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
