--- a/index.html
+++ b/index.html
@@ -84,39 +84,36 @@
       </ul>
     </section>
     <section>
-      <span>ПОПУЛЯРНЫЕ ТОВАРЫ:</span>
+      <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
       <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       <ul>
-        <li><a href="#">КУПИТЬ</a></li>
-        <li><a href="#">В ЗАКЛАДКУ</a></li>
-        <li><img src="" alt=""></li>
-        <li><span>Перфоратор BOSCH BFG 9000</span></li>
-        <li><span>32500 Р.</span></li>
-        <li><a href="#">25500 Р.</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">КУПИТЬ</a></li>
-        <li><a href="#">В ЗАКЛАДКУ</a></li>
-        <li><img src="" alt=""></li>
-        <li><span>Перфоратор BOSCH BFG 3000</span></li>
-        <li><span>22500 Р.</span></li>
-        <li><a href="#">15500 Р.</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">КУПИТЬ</a></li>
-        <li><a href="#">В ЗАКЛАДКУ</a></li>
-        <li><img src="" alt=""></li>
-        <li><span>Перфоратор BOSCH BFG 6000</span></li>
-        <li><span>30500 Р.</span></li>
-        <li><a href="#">25500 Р.</a></li>
-      </ul>
-      <ul>
-        <li><a href="#">КУПИТЬ</a></li>
-        <li><a href="#">В ЗАКЛАДКУ</a></li>
-        <li><img src="" alt=""></li>
-        <li><span>Перфоратор BOSCH BFG 2000</span></li>
-        <li><span>22500 Р.</span></li>
-        <li><a href="#">15500 Р.</a></li>
+        <li><a href="#">КУПИТЬ</a>
+        <a href="#">В ЗАКЛАДКУ</a>
+        <img src="" alt="">
+        <span>Перфоратор BOSCH BFG 9000</span>
+        <span>32500 Р.</span>
+        <a href="#">25500 Р.</a></li>
+
+        <li><a href="#">КУПИТЬ</a>
+        <a href="#">В ЗАКЛАДКУ</a>
+        <img src="" alt="">
+        <span>Перфоратор BOSCH BFG 3000</span>
+        <span>22500 Р.</span>
+        <a href="#">15500 Р.</a></li>
+
+        <li><a href="#">КУПИТЬ</a>
+        <a href="#">В ЗАКЛАДКУ</a>
+        <img src="" alt="">
+        <span>Перфоратор BOSCH BFG 6000</span>
+        <span>30500 Р.</span>
+        <a href="#">25500 Р.</a></li>
+
+        <li><a href="#">КУПИТЬ</a>
+        <a href="#">В ЗАКЛАДКУ</a>
+        <img src="" alt="">
+        <span>Перфоратор BOSCH BFG 2000</span>
+        <span>22500 Р.</span>
+        <a href="#">15500 Р.</a></li>
       </ul>
     </section>
     <section>
