--- a/index.html
+++ b/index.html
@@ -88,32 +88,36 @@
       <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       <ul>
         <li><a href="#">КУПИТЬ</a>
-        <a href="#">В ЗАКЛАДКУ</a>
-        <img src="" alt="">
-        <span>Перфоратор BOSCH BFG 9000</span>
-        <span>32500 Р.</span>
-        <a href="#">25500 Р.</a></li>
+          <a href="#">В ЗАКЛАДКУ</a>
+          <img src="" alt="">
+          <span>Перфоратор BOSCH BFG 9000</span>
+          <span>32500 Р.</span>
+          <a href="#">25500 Р.</a>
+        </li>
 
         <li><a href="#">КУПИТЬ</a>
-        <a href="#">В ЗАКЛАДКУ</a>
-        <img src="" alt="">
-        <span>Перфоратор BOSCH BFG 3000</span>
-        <span>22500 Р.</span>
-        <a href="#">15500 Р.</a></li>
+          <a href="#">В ЗАКЛАДКУ</a>
+          <img src="" alt="">
+          <span>Перфоратор BOSCH BFG 3000</span>
+          <span>22500 Р.</span>
+          <a href="#">15500 Р.</a>
+        </li>
 
         <li><a href="#">КУПИТЬ</a>
-        <a href="#">В ЗАКЛАДКУ</a>
-        <img src="" alt="">
-        <span>Перфоратор BOSCH BFG 6000</span>
-        <span>30500 Р.</span>
-        <a href="#">25500 Р.</a></li>
+          <a href="#">В ЗАКЛАДКУ</a>
+          <img src="" alt="">
+          <span>Перфоратор BOSCH BFG 6000</span>
+          <span>30500 Р.</span>
+          <a href="#">25500 Р.</a>
+        </li>
 
         <li><a href="#">КУПИТЬ</a>
-        <a href="#">В ЗАКЛАДКУ</a>
-        <img src="" alt="">
-        <span>Перфоратор BOSCH BFG 2000</span>
-        <span>22500 Р.</span>
-        <a href="#">15500 Р.</a></li>
+          <a href="#">В ЗАКЛАДКУ</a>
+          <img src="" alt="">
+          <span>Перфоратор BOSCH BFG 2000</span>
+          <span>22500 Р.</span>
+          <a href="#">15500 Р.</a>
+        </li>
       </ul>
     </section>
     <section>
