--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 
 <body>
   <header>
-    <h1>
       <a href="index.html">Техномарт</a>
-    </h1>
     <input type="search" placeholder="Поиск:">
     <a href="#">
       Закладки: 0
@@ -182,18 +180,11 @@
     </section>
   </main>
   <footer>
-    <section>
-
-      <h2>
         <a href="#">Техномарт</a>
-      </h2>
       <p>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         +7 (812) 555-05-55
       </p>
-    </section>
-    <section>
-
       <ul>
         <li><a href="#">Компания</a></li>
         <li><a href="#">Новости</a></li>
@@ -201,22 +192,16 @@
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Контакты</a></li>
       </ul>
-    </section>
-    <section>
       <ul>
         <li><a href="#">Материал</a></li>
         <li><a href="#">Техника</a></li>
         <li><a href="#">Инструмент</a></li>
         <li><a href="#">Спецпредлжения</a></li>
       </ul>
-    </section>
-    <section>
       <p>
         © 2010-2016 Компания «Техномарт»<br>
         Все права защищены
       </p>
-    </section>
-    <section>
       <ul>
         <li>
           <a href="#">Вконтакте</a>
@@ -228,14 +213,9 @@
           <a href="#">Инстаграм</a>
         </li>
       </ul>
-    </section>
-    <section>
       <p>Обратная связь:</p><br>
-      <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-    </section>
-    <section>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       <p>Разработано — </p><br>
       <a href=" htmlacademy.ru"> htmlacademy.ru</a>
-    </section>
   </footer>
 </body>
