--- a/catalog.html
+++ b/catalog.html
@@ -14,12 +14,8 @@
       Закладки: 0
     </a>
     <ul>
-      <li><a href="#">
-          Корзина: 0
-        </a></li>
-      <li><a href="#">
-          Оформить заказ
-        </a></li>
+      <li><a href="#">Корзина: 0</a></li>
+      <li><a href="#">Оформить заказ</a></li>
     </ul>
     <p>Интернет-магазин<br>
       строительных материалов<br>
@@ -60,9 +56,9 @@
         <fieldset>
           <legend>ЦЕНА:</legend>
           <!--тут будет ползунок цены-->
-          <label><input type="text" value="100"></label>
+          <label><input type="number" value="100"></label>
           <span>-</span>
-          <label><input type="text" value="600"></label>
+          <label><input type="number" value="600"></label>
         </fieldset>
         <fieldset>
           <legend>ПРОИЗВОДИТЕЛИ:</legend>
@@ -82,7 +78,7 @@
           <input type="radio" name="supply" id="rd1" value="accumulator">
           <label for="rd1">АККУМУЛЯТОРНЫЕ</label>
           <input type="radio" name="supply" id="rd2" value="lan">
-          <label for="rd2">СЕТЕВЫН</label>
+          <label for="rd2">СЕТЕВЫЕ</label>
         </fieldset>
         <button type="submit">Показать</button>
       </form>
@@ -100,62 +96,62 @@
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 6000</span>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 6000</span>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 6000</span>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>32500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 3000</span>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 6000</span>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 2000</span>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
           <a href="#">12500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 3000</span>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 6000</span>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 2000</span>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
           <a href="#">25500 Р.</a>
         </li>
       </ul>
@@ -175,10 +171,10 @@
   </main>
   <footer>
     <a href="#">Техномарт</a>
-    <p>
+    <address>
       г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
       +7 (812) 555-05-55
-    </p>
+    </address>
     <ul>
       <li><a href="#">Компания</a></li>
       <li><a href="#">Новости</a></li>
