--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
       Закладки: 0
     </a>
     <ul>
-      <li><a href="#">
-          Корзина: 0
-        </a></li>
-      <li><a href="#">
-          Оформить заказ
-        </a></li>
+      <li><a href="#">Корзина: 0</a></li>
+      <li><a href="#">Оформить заказ</a></li>
     </ul>
     <p>Интернет-магазин<br>
       строительных материалов<br>
@@ -88,15 +84,15 @@
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 9000</span>
-          <span>32500 Р.</span>
+          <h3>Перфоратор BOSCH BFG 9000</h3>
+          <h3>32500 Р.</h3>
           <a href="#">25500 Р.</a>
         </li>
 
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 3000</span>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
@@ -104,7 +100,7 @@
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 6000</span>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
@@ -112,7 +108,7 @@
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img src="" alt="">
-          <span>Перфоратор BOSCH BFG 2000</span>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
@@ -181,10 +177,10 @@
   </main>
   <footer>
         <a href="#">Техномарт</a>
-      <p>
+      <address>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         +7 (812) 555-05-55
-      </p>
+      </address>
       <ul>
         <li><a href="#">Компания</a></li>
         <li><a href="#">Новости</a></li>
