--- a/catalog.html
+++ b/catalog.html
@@ -4,11 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+
+
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon-small.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
-    <a href="index.html">Техномарт</a>
+      <a href="index.html"><img src="img/main-logo1.svg" width="220" height="47" alt="Главный логотив"></a>
     <input type="search" placeholder="Поиск:">
     <a href="#">
       Закладки: 0
@@ -95,62 +101,62 @@
       <ul>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>32500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <a href="#">12500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" alt="Перфоратор">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <a href="#">25500 Р.</a>
         </li>
@@ -170,41 +176,41 @@
     </section>
   </main>
   <footer>
-    <a href="#">Техномарт</a>
-    <address>
-      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-      +7 (812) 555-05-55
-    </address>
-    <ul>
-      <li><a href="#">Компания</a></li>
-      <li><a href="#">Новости</a></li>
-      <li><a href="#">Каталог</a></li>
-      <li><a href="#">Доставка</a></li>
-      <li><a href="#">Контакты</a></li>
-    </ul>
-    <ul>
-      <li><a href="#">Материал</a></li>
-      <li><a href="#">Техника</a></li>
-      <li><a href="#">Инструмент</a></li>
-      <li><a href="#">Спецпредлжения</a></li>
-    </ul>
-    <p>
-      © 2010-2016 Компания «Техномарт»<br>
-      Все права защищены
-    </p>
-    <ul>
-      <li>
-        <a href="#">Вконтакте</a>
-      </li>
-      <li>
-        <a href="#">Фейсбук</a>
-      </li>
-      <li>
-        <a href="#">Инстаграм</a>
-      </li>
-    </ul>
-    <p>Обратная связь:</p><br>
-    <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-    <p>Разработано — </p><br>
-    <a href="htmlacademy.ru"> htmlacademy.ru</a>
+        <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Нижний логотив"></a>
+      <address>
+        г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+        +7 (812) 555-05-55
+      </address>
+      <ul>
+        <li><a href="#">Компания</a></li>
+        <li><a href="#">Новости</a></li>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">Материал</a></li>
+        <li><a href="#">Техника</a></li>
+        <li><a href="#">Инструмент</a></li>
+        <li><a href="#">Спецпредлжения</a></li>
+      </ul>
+      <p>
+        © 2010-2016 Компания «Техномарт»<br>
+        Все права защищены
+      </p>
+      <ul>
+        <li>
+          <a href="#"><img src="img/vk.svg" alt="VK"></a>
+        </li>
+        <li>
+          <a href="#"><img src="img/facebook.svg" alt="Facebook"></a>
+        </li>
+        <li>
+          <a href="#"><img src="img/inst.svg" alt="Instagram"></a>
+        </li>
+      </ul>
+      <p>Обратная связь:</p><br>
+      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+      <p>Разработано — </p><br>
+      <a href=" htmlacademy.ru"> htmlacademy.ru</a>
   </footer>
