--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
+
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon-small.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
-      <a href="index.html">Техномарт</a>
+      <a href="index.html"><img src="img/main-logo1.svg" width="220" height="47" alt="Главный логотив"></a>
     <input type="search" placeholder="Поиск:">
     <a href="#">
       Закладки: 0
@@ -83,7 +88,7 @@
       <ul>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor1.jpg" width="184" height="164" alt="Перфоратор-1">
           <h3>Перфоратор BOSCH BFG 9000</h3>
           <h3>32500 Р.</h3>
           <a href="#">25500 Р.</a>
@@ -91,7 +96,7 @@
 
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор-2">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
@@ -99,7 +104,7 @@
 
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор-3">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
@@ -107,7 +112,7 @@
 
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="" alt="">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор-2">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
@@ -118,14 +123,14 @@
       <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
       <a href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       <ul>
-        <li><a href="#">BOSCH</a></li>
-        <li><a href="#">MAKITA</a></li>
-        <li><a href="#">DeWALT</a></li>
-        <li><a href="#">ИНТРЕСКОЛ</a></li>
-        <li><a href="#">HITACHI</a></li>
-        <li><a href="#">LG</a></li>
-        <li><a href="#">AEG</a></li>
-        <li><a href="#">METABO</a></li>
+        <li><a href="#"><img src="img/partners1.png" width="220" height="145" alt="BOSCH"></a></li>
+        <li><a href="#"><img src="img/partners2.png" width="220" height="145" alt="MAKITA"></a></li>
+        <li><a href="#"><img src="img/partners3.png" width="220" height="145" alt="DeWALT"></a></li>
+        <li><a href="#"><img src="img/partners4.png" width="220" height="145" alt="ИНТРЕСКОЛ"></a></li>
+        <li><a href="#"><img src="img/partners5.png" width="220" height="145" alt="HITACHI"></a></li>
+        <li><a href="#"><img src="img/partners6.png" width="220" height="145" alt="LG"></a></li>
+        <li><a href="#"><img src="img/partners7.png" width="220" height="145" alt="AEG"></a></li>
+        <li><a href="#"><img src="img/partners8.png" width="220" height="145" alt="METABO"></a></li>
       </ul>
     </section>
     <section>
@@ -176,7 +181,7 @@
     </section>
   </main>
   <footer>
-        <a href="#">Техномарт</a>
+        <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Нижний логотив"></a>
       <address>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         +7 (812) 555-05-55
@@ -200,13 +205,13 @@
       </p>
       <ul>
         <li>
-          <a href="#">Вконтакте</a>
+          <a href="#"><img src="img/vk.svg" alt="VK"></a>
         </li>
         <li>
-          <a href="#">Фейсбук</a>
+          <a href="#"><img src="img/facebook.svg" alt="Facebook"></a>
         </li>
         <li>
-          <a href="#">Инстаграм</a>
+          <a href="#"><img src="img/inst.svg" alt="Instagram"></a>
         </li>
       </ul>
       <p>Обратная связь:</p><br>
