--- a/catalog.html
+++ b/catalog.html
@@ -101,62 +101,62 @@
       <ul>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="144" height="128"  alt="Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>32500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <a href="#">12500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" alt="Перфоратор">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <a href="#">25500 Р.</a>
         </li>
@@ -176,7 +176,7 @@
     </section>
   </main>
   <footer>
-        <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Нижний логотив"></a>
+        <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотип Техномарт"></a>
       <address>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         +7 (812) 555-05-55
@@ -212,5 +212,5 @@
       <p>Обратная связь:</p><br>
       <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       <p>Разработано — </p><br>
-      <a href=" htmlacademy.ru"> htmlacademy.ru</a>
+      <a href="htmlacademy.ru"> htmlacademy.ru</a>
   </footer>
