--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicon-small.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="img/180.png">
+  <link rel="apple-touch-icon" href="img/favicon180.png">
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
-      <a href="index.html"><img src="img/main-logo1.svg" width="220" height="47" alt="Главный логотив"></a>
+      <a href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
     <input type="search" placeholder="Поиск:">
     <a href="#">
       Закладки: 0
@@ -88,7 +88,7 @@
       <ul>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor1.jpg" width="184" height="164" alt="Перфоратор-1">
+          <img src="img/perfor1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           <h3>Перфоратор BOSCH BFG 9000</h3>
           <h3>32500 Р.</h3>
           <a href="#">25500 Р.</a>
@@ -96,7 +96,7 @@
 
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор-2">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           <h3>Перфоратор BOSCH BFG 3000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
@@ -104,7 +104,7 @@
 
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор-3">
+          <img src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           <h3>Перфоратор BOSCH BFG 6000</h3>
           <span>30500 Р.</span>
           <a href="#">25500 Р.</a>
@@ -112,7 +112,7 @@
 
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор-2">
+          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           <h3>Перфоратор BOSCH BFG 2000</h3>
           <span>22500 Р.</span>
           <a href="#">15500 Р.</a>
@@ -205,13 +205,13 @@
       </p>
       <ul>
         <li>
-          <a href="#"><img src="img/vk.svg" alt="VK"></a>
+          <a href="#">VK</a>
         </li>
         <li>
-          <a href="#"><img src="img/facebook.svg" alt="Facebook"></a>
+          <a href="#">Facebook</a>
         </li>
         <li>
-          <a href="#"><img src="img/inst.svg" alt="Instagram"></a>
+          <a href="#">Instagram</a>
         </li>
       </ul>
       <p>Обратная связь:</p><br>
